...
        label = "Data",
        testTag = "tab_workspace",
        iconResId = R.drawable.ic_section_data,
    ),
    EDITOR(
        label = "Editor",
        testTag = "tab_editor",
        iconResId = R.drawable.ic_section_record,
    ),
    QUERY(
        label = "Query",
        testTag = "tab_query",
        iconResId = R.drawable.ic_section_report,
...
